Add basic site setup.

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
 
 		<title>Porto - Responsive HTML5 Template 5.7.2</title>	
 
-		<meta name="keywords" content="HTML5 Template" />
-		<meta name="description" content="Porto - Responsive HTML5 Template">
-		<meta name="author" content="okler.net">
+		<meta name="keywords" content="ItCleanup" />
+		<meta name="description"
+			  content="ItCleanup - Wholesale used IT equipment dealers">
+		<meta name="author" content="vinod.gupta">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -62,7 +63,7 @@
 							<div class="header-column">
 								<div class="header-logo">
 									<a href="index.html">
-										<img alt="Porto" width="111" height="54" data-sticky-width="82" data-sticky-height="40" data-sticky-top="33" src="img/logo.png">
+										<img alt="ItCleanup" width="333" height="162" data-sticky-width="164" data-sticky-height="80" data-sticky-top="66" src="img/logo.png">
 									</a>
 								</div>
 							</div>
@@ -87,7 +88,7 @@
 												<a href="contact-us.html"><i class="fa fa-angle-right"></i> Contact Us</a>
 											</li>
 											<li>
-												<span class="ws-nowrap"><i class="fa fa-phone"></i> (123) 456-789</span>
+												<span class="ws-nowrap"><i class="fa fa-phone"></i> (650) 787-3966</span>
 											</li>
 										</ul>
 									</nav>
@@ -539,7 +540,7 @@
 						<div id="revolutionSlider" class="slider rev_slider" data-plugin-revolution-slider data-plugin-options="{'delay': 9000, 'gridwidth': 1170, 'gridheight': 560}">
 							<ul>
 								<li data-transition="fade">
-									<img src="img/slides/slide-bg-5.jpg"  
+									<img src="img/slides/laptop-pile-slide.jpg"
 										alt=""
 										data-bgposition="center center" 
 										data-bgfit="cover" 
@@ -556,7 +557,7 @@
 										data-x="227"
 										data-y="180"
 										data-start="500"
-										data-transform_in="y:[-300%];opacity:0;s:500;">DO YOU NEED A NEW</div>
+										data-transform_in="y:[-300%];opacity:0;s:500;">Do you want a partner you can trust?</div>
 
 									<div class="tp-caption"
 										data-x="480"
@@ -571,13 +572,13 @@
 										data-whitespace="nowrap"						 
 										data-transform_in="y:[100%];s:500;"
 										data-transform_out="opacity:0;s:500;"
-										data-mask_in="x:0px;y:0px;">WEB DESIGN?</div>
+										data-mask_in="x:0px;y:0px;">IT Cleanup</div>
 
 									<div class="tp-caption bottom-label"
 										data-x="185"
 										data-y="280"
 										data-start="2000"
-										data-transform_in="y:[100%];opacity:0;s:500;">Check out our options and features.</div>
+										data-transform_in="y:[100%];opacity:0;s:500;">Talk to us today. We don't resell your stuff locally.</div>
 									
 								</li>
 							</ul>
@@ -590,8 +591,8 @@
 							<div class="row">
 								<div class="col-md-8">
 									<p>
-										The fastest way to grow your business with the leader in <em>Technology</em>
-										<span>Check out our options and features included.</span>
+										The fastest way to grow your business with market leading operations across Asia
+										<span>Talk to us today.</span>
 									</p>
 								</div>
 								<div class="col-md-4">
@@ -676,10 +677,10 @@
 
 					<div class="row">
 						<div class="col-md-7">
-							<h2>A place where amazing things <strong>Get Done!</strong></h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat urna arcu, vel molestie nunc commodo non. Nullam vestibulum odio vitae fermentum rutrum.</p>
+							<h2>Your one stop dealer to sell <strong>used IT equipment!</strong></h2>
+							<p class="lead"> We believe in bringing value to our partners. We are direct refurbishers with offices across Asia.</p>
 
-							<p>Mauris lobortis nulla ut aliquet interdum. Donec commodo ac elit sed placerat. Mauris rhoncus est ac sodales gravida. In eros felis, elementum aliquam nisi vel, pellentesque faucibus nulla.</p>
+							<p>We buy all brands used laptops and other IT equipment. We dont resell your equipment locally. All equipment goes to our offices in Asia where its refurbished and reaches directly end users. </p>
 
 							<div class="row mt-xlg mb-xl">
 								<div class="col-md-6">
@@ -688,8 +689,8 @@
 											<i class="fa fa-star"></i>
 										</div>
 										<div class="feature-box-info">
-											<h4 class="heading-primary mb-xs">12 years in business</h4>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing <span class="alternative-font">metus.</span> elit. Quisque rutrum pellentesque imperdiet.</p>
+											<h4 class="heading-primary mb-xs"> Asia operations since 2005</h4>
+											<p> Selling to us means that you dont have a business just making money by aggregating stuff and reselling to multiple companies. We ship all our equopment to our offices in Singapore.</p>
 										</div>
 									</div>
 								</div>
@@ -699,8 +700,8 @@
 											<i class="fa fa-heart"></i>
 										</div>
 										<div class="feature-box-info">
-											<h4 class="heading-primary mb-xs">Loved by customers</h4>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla.</p>
+											<h4 class="heading-primary mb-xs">Loved by customers and partners</h4>
+											<p>We believe that business are build on trust and customer relations. We will never try to make false promise and under deliver. </p>
 										</div>
 									</div>
 								</div>
@@ -747,9 +748,9 @@
 							<div id="googlemaps" class="google-map small"></div>
 
 							<ul class="list list-icons list-icons-style-3 mt-xlg">
-								<li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</li>
-								<li><i class="fa fa-phone"></i> <strong>Phone:</strong> (123) 456-789</li>
-								<li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a></li>
+								<li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 34754 Siward Dr, Fremont, California 94555, United States</li>
+								<li><i class="fa fa-phone"></i> <strong>Phone:</strong> (650) 787-3966</li>
+								<li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">info@itcleanup.com</a></li>
 							</ul>
 
 							<hr>
@@ -804,9 +805,9 @@
 							<div class="contact-details">
 								<h4>Contact Us</h4>
 								<ul class="contact">
-									<li><p><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</p></li>
-									<li><p><i class="fa fa-phone"></i> <strong>Phone:</strong> (123) 456-789</p></li>
-									<li><p><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a></p></li>
+									<li><p><i class="fa fa-map-marker"></i> <strong>Address:</strong> 34754 Siward Dr, Fremont, California 94555, United States</p></li>
+									<li><p><i class="fa fa-phone"></i> <strong>Phone:</strong> (650) 787-3966</p></li>
+									<li><p><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">info@itcleanup.com</a></p></li>
 								</ul>
 							</div>
 						</div>
@@ -823,11 +824,6 @@
 				<div class="footer-copyright">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-1">
-								<a href="index.html" class="logo">
-									<img alt="Porto Website Template" class="img-responsive" src="img/logo-footer.png">
-								</a>
-							</div>
 							<div class="col-md-7">
 								<p>© Copyright 2017. All Rights Reserved.</p>
 							</div>
@@ -866,7 +862,8 @@
 		<script src="js/theme.js"></script>
 		
 		<!-- Current Page Vendor and Views -->
-		<script src="vendor/rs-plugin/js/jquery.themepunch.tools.min.js"></script>		<script src="vendor/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+		<script src="vendor/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+		<script src="vendor/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 
 		<!-- Current Page Vendor and Views -->
 		<script src="js/views/view.contact.js"></script>
@@ -877,7 +874,7 @@
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
 
-		<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM0VFhswsa5iSiztF7MARARq7_ATjB254"></script>
 		<script>
 
 			/*
@@ -891,8 +888,8 @@
 
 			// Map Markers
 			var mapMarkers = [{
-				address: "New York, NY 10017",
-				html: "<strong>New York Office</strong><br>New York, NY 10017",
+				address: "Fremont, CA 94555",
+				html: "<strong>San Francisco Bay Area Office</strong><br>Fremont, CA 94555",
 				icon: {
 					image: "img/pin.png",
 					iconsize: [26, 46],
@@ -902,8 +899,8 @@
 			}];
 
 			// Map Initial Location
-			var initLatitude = 40.75198;
-			var initLongitude = -73.96978;
+			var initLatitude = 48.87146;
+			var initLongitude = 2.35500;
 
 			// Map Extended Settings
 			var mapSettings = {
